--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "flyok666/yii2-uploadifive": "^1.0",
         "flyok666/yii2-qiniu": "~1.0.0",
-        "creocoder/yii2-nested-sets": "^0.9.0"
+        "creocoder/yii2-nested-sets": "^0.9.0",
+        "kucha/ueditor": "^1.21"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
